2004-06-08  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* version.h: update to 5.1.1ds-rc4
	* scripts/nodelist/nl-autoupd.in: add detecting
	    DIFFDIR, NLDIR, NLFDIR in fidogate.conf

2004-06-06  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* version.h: update version number to 5.1.1ds-rc3
	* src/gate/send-fidogate.in: add detecting LOGDIR
	    and LOCKDIR in fidogate.conf
	* src/util/confval.c: change sterr to stdout if
	    variable exist
	* src/common/getopt.c: fix args
	* src/common/misc.c: fix and rewrite str_append()

2004-05-26  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* Changes.ru: update
	* doc/FAQ.ru: add Id

2004-05-24  Andrey Slusar <rusfidogate@users.sourceforge.net>
	
	* version.h: update version number to 5.1.1ds-rc1
	* src/areafix/areafix.c: add key for NEW command

2004-04-18  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* packages/freebsd: update

2004-04-15  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* scripts/nodelist/nl-autoupd.in: remove $IFINDEX

2004-03-30  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/rfcheader.c: fix RECODE_ALL_RFC
	* src/common/getopt.c: fix warning
	* src/gate/ftninpost.c: fix warning
	* src/tick/ftntick.c: fix warning

2004-03-29  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/arafix/areafix.c: fix crashing ftnafutil if
	    rulesfile is broken

2004-03-24  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: remove unnecessary '\n' if
	    enable AFSEND_ECHO_STATUS

2004-03-16  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* packages/freebsd: update

2004-03-12  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: fix cmd_listall finding
	    dupe lines in lists (thanks to Anton Leer)
	* TODO.rus: update

2004-03-04  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/msgid.c: fix trap ftn2rfc if bad
	    REPLY and use dbc_history
